feat: 添加seaseedfs配置
